--- a/app/src/main/res/layout/activity_second_linear.xml
+++ b/app/src/main/res/layout/activity_second_linear.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -10,7 +11,7 @@
 
 
 
-        <ImageView
+         <ImageView
             android:id="@+id/iv_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -24,18 +25,20 @@
 
                 <TextView
                     android:id="@+id/tv_naziv"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    />
+                    android:gravity="center"
+                />
 
                 <TextView
                     android:id="@+id/tv_opis"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"/>
 
                 <Spinner
                     android:id="@+id/sp_kategorija"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"/>
 
@@ -74,12 +77,19 @@
             <TextView
                 android:id="@+id/tv_kalorije"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
 
             <TextView
                 android:id="@+id/tv_cena"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
+
+            <RatingBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:numStars="5"/>
 
         </LinearLayout>
 
@@ -87,7 +97,6 @@
 
 
     </LinearLayout>
-
 
 
 </LinearLayout>
